--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+body {
+  background-color: rgb(23, 4, 41);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.wrapper,
+html,
+body,
+#root {
+  display: flex;
+  height: 100%;
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.left {
+  flex-grow: 1;
+  height: 100%;
+}
+
+.right {
+  background-color: rgb(10, 10, 86);
+  width: 20rem;
+  height: 100%;
+}
+
+.storesContainer {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 1.5rem;
+  gap: 0.5rem;
+}
+
+.store,
+.remaining {
+  height: 1.5rem;
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.25rem;
+}
+
+.store {
+  background-color: rgb(102, 118, 112);
+}
+
+.remaining {
+  background-color: rgb(4, 52, 14);
 }
